swagger and redoc setttings
