# src/routes/auth.router.js
@@ -8,6 +8,6 @@ const auth = require('../controllers/auth.controller')
 // URL: /auth baslangic url 
 
 router.post('/login', auth.login)
-router.all('/logout', auth.logout)
+router.get('/logout', auth.logout)
 
 module.exports = router
